--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Run Ch 3",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/book_assignments/mavsim_chap3.py",
+            "console": "integratedTerminal"
+        },
+        {
             "name": "Run Ch 3 Unit Tests",
             "type": "debugpy",
             "request": "launch",
